--- a/Sleep Pal/Base.lproj/Main.storyboard
+++ b/Sleep Pal/Base.lproj/Main.storyboard
@@ -12,9 +12,9 @@
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="113" sectionHeaderHeight="22" sectionFooterHeight="22" id="bQP-O1-y2m">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="551"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="0.1960784314" green="0.23529411759999999" blue="0.41960784309999999" alpha="1" colorSpace="calibratedRGB"/>
-                        <color key="sectionIndexBackgroundColor" red="0.1960784314" green="0.23529411759999999" blue="0.41960784309999999" alpha="1" colorSpace="calibratedRGB"/>
-                        <color key="sectionIndexTrackingBackgroundColor" red="0.1960784314" green="0.23529411759999999" blue="0.41960784309999999" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.19134316130000001" green="0.21094690869999999" blue="0.2468039773" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="sectionIndexBackgroundColor" red="0.19134316130000001" green="0.21094690869999999" blue="0.2468039773" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="sectionIndexTrackingBackgroundColor" red="0.19134316130000001" green="0.21094690869999999" blue="0.2468039773" alpha="1" colorSpace="calibratedRGB"/>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SleepEntryCell" rowHeight="113" id="r4M-8x-ntZ" customClass="SleepEntryCell" customModule="Sleep_Pal" customModuleProvider="target">
                                 <autoresizingMask key="autoresizingMask"/>
@@ -57,7 +57,7 @@
                                         <constraint firstAttribute="centerY" secondItem="wsm-67-huS" secondAttribute="centerY" constant="0.5" id="r5I-Lm-kY6"/>
                                     </constraints>
                                 </tableViewCellContentView>
-                                <color key="backgroundColor" red="0.19776288589999999" green="0.23603297170000001" blue="0.42025018400000003" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="0.11372549019607843" green="0.16078431372549018" blue="0.24705882352941178" alpha="1" colorSpace="calibratedRGB"/>
                                 <connections>
                                     <outlet property="dateLabel" destination="7tA-EL-Z0A" id="Cen-TK-VJ8"/>
                                     <outlet property="durationLabel" destination="wsm-67-huS" id="And-r2-ShZ"/>
@@ -94,7 +94,7 @@
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="q9m-0m-9QD" customClass="UILabel">
                                 <rect key="frame" x="42" y="72" width="516" height="211"/>
-                                <color key="backgroundColor" red="0.1960784314" green="0.23529411759999999" blue="0.41960784309999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="0.1137254902" green="0.16078431369999999" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="211" id="S8R-BM-REc"/>
                                 </constraints>
@@ -160,7 +160,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" red="0.1960784314" green="0.23529411759999999" blue="0.41960784309999999" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.1137254902" green="0.16078431369999999" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="7uT-li-Rgt" firstAttribute="top" secondItem="q9m-0m-9QD" secondAttribute="bottom" constant="21" id="2Va-Gl-Udh"/>
                             <constraint firstItem="BpX-1Q-Pt0" firstAttribute="top" secondItem="q9m-0m-9QD" secondAttribute="bottom" constant="21" id="8yl-4l-iyG"/>
@@ -242,14 +242,17 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="moon" translatesAutoresizingMaskIntoConstraints="NO" id="myz-Nc-bI2">
                                 <rect key="frame" x="229" y="169" width="143" height="155"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Ready to sleep? Press start to begin--" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Buz-I3-Vbc">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Ready to sleep? Press start to begin" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Buz-I3-Vbc">
                                 <rect key="frame" x="154" y="387" width="293" height="22"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
+                                <variation key="widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="47" y="387" width="307" height="22"/>
+                                </variation>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" red="0.19607843137254902" green="0.23529411764705882" blue="0.41960784313725491" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.1145251085" green="0.1618413913" blue="0.2468039773" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="Y99-Ug-rpo" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" id="JKZ-xE-Uo6"/>
                             <constraint firstItem="fMG-Wo-TBh" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="46" id="NMP-XS-j3s"/>
@@ -267,12 +270,111 @@
                     <connections>
                         <outlet property="instructionsLabel" destination="Buz-I3-Vbc" id="WEv-Xk-Dtb"/>
                         <outlet property="logoLabel" destination="fMG-Wo-TBh" id="6Hr-Cc-vtY"/>
+                        <outlet property="moonImageView" destination="myz-Nc-bI2" id="izb-Yq-fom"/>
                         <outlet property="startButton" destination="Y99-Ug-rpo" id="8dq-Yk-fYN"/>
+                        <segue destination="TDs-n7-kd4" kind="presentation" identifier="instructionsSegue" id="TcJ-49-WcI"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1152" y="375"/>
+        </scene>
+        <!--Instructions View Controller-->
+        <scene sceneID="Wx0-ii-yKM">
+            <objects>
+                <viewController id="TDs-n7-kd4" customClass="InstructionsViewController" customModule="Sleep_Pal" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Xqb-H4-u2s"/>
+                        <viewControllerLayoutGuide type="bottom" id="Nu7-Db-zfT"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="nIt-rI-Eg8">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="charge" translatesAutoresizingMaskIntoConstraints="NO" id="1rP-uW-CtX">
+                                <rect key="frame" x="263" y="74" width="75" height="180"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="75" id="Shb-Vo-R2g">
+                                        <variation key="widthClass=compact" constant="184"/>
+                                    </constraint>
+                                    <constraint firstAttribute="height" constant="180" id="YxZ-O9-Yps">
+                                        <variation key="widthClass=compact" constant="281"/>
+                                    </constraint>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7qg-mY-bz1">
+                                <rect key="frame" x="537" y="20" width="47" height="36"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="Done">
+                                    <color key="titleColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="donePressed:" destination="TDs-n7-kd4" eventType="touchUpInside" id="3su-YZ-jyy"/>
+                                </connections>
+                            </button>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="aCC-2d-I3d">
+                                <rect key="frame" x="369" y="508" width="51" height="31"/>
+                            </switch>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Dont show me this again" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ve3-IW-wLB">
+                                <rect key="frame" x="166" y="513" width="190" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="368" placeholderIntrinsicHeight="114" text="Plug in the phone and place it under (or close to) your pillow. You can lock the screen." textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gef-Sg-Y8a">
+                                <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.1145251085" green="0.1618413913" blue="0.2468039773" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="7qg-mY-bz1" firstAttribute="top" secondItem="Xqb-H4-u2s" secondAttribute="bottom" id="4gj-Aw-jO6"/>
+                            <constraint firstAttribute="centerX" secondItem="1rP-uW-CtX" secondAttribute="centerX" constant="-0.5" id="7rd-NX-FKP"/>
+                            <constraint firstItem="7qg-mY-bz1" firstAttribute="trailing" secondItem="nIt-rI-Eg8" secondAttribute="trailingMargin" id="Bt1-Kp-S6H"/>
+                            <constraint firstItem="Nu7-Db-zfT" firstAttribute="top" secondItem="Ve3-IW-wLB" secondAttribute="bottom" constant="66" id="Hxj-eo-jck"/>
+                            <constraint firstItem="gef-Sg-Y8a" firstAttribute="top" secondItem="1rP-uW-CtX" secondAttribute="bottom" constant="8" id="N42-zd-FEM">
+                                <variation key="widthClass=compact" constant="19"/>
+                            </constraint>
+                            <constraint firstItem="1rP-uW-CtX" firstAttribute="top" secondItem="Xqb-H4-u2s" secondAttribute="bottom" constant="54" id="R7Z-i0-RCT">
+                                <variation key="widthClass=compact" constant="66"/>
+                            </constraint>
+                            <constraint firstItem="aCC-2d-I3d" firstAttribute="centerY" secondItem="Ve3-IW-wLB" secondAttribute="centerY" id="S0c-ng-trw"/>
+                            <constraint firstItem="gef-Sg-Y8a" firstAttribute="leading" secondItem="nIt-rI-Eg8" secondAttribute="leadingMargin" id="XmO-t3-bN5"/>
+                            <constraint firstItem="aCC-2d-I3d" firstAttribute="leading" secondItem="Ve3-IW-wLB" secondAttribute="trailing" constant="13" id="YuA-46-XdZ"/>
+                            <constraint firstAttribute="centerX" secondItem="Ve3-IW-wLB" secondAttribute="centerX" constant="39" id="jq5-Xn-bFL"/>
+                            <constraint firstItem="gef-Sg-Y8a" firstAttribute="trailing" secondItem="nIt-rI-Eg8" secondAttribute="trailingMargin" id="xWH-6b-ZnQ"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="gef-Sg-Y8a"/>
+                            </mask>
+                            <mask key="constraints">
+                                <exclude reference="N42-zd-FEM"/>
+                                <exclude reference="XmO-t3-bN5"/>
+                                <exclude reference="xWH-6b-ZnQ"/>
+                            </mask>
+                        </variation>
+                        <variation key="widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="gef-Sg-Y8a"/>
+                            </mask>
+                            <mask key="constraints">
+                                <include reference="N42-zd-FEM"/>
+                                <include reference="XmO-t3-bN5"/>
+                                <include reference="xWH-6b-ZnQ"/>
+                            </mask>
+                        </variation>
+                    </view>
+                    <connections>
+                        <outlet property="shouldShowAgainSwitch" destination="aCC-2d-I3d" id="7BC-ou-8yv"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rIN-gk-ysW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1152" y="1142"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="buZ-ab-1MF">
@@ -282,7 +384,8 @@
                     <nil key="simulatedBottomBarMetrics"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" translucent="NO" id="D01-JL-neK">
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="barTintColor" red="0.0" green="0.0" blue="0.24680397727272727" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="barTintColor" red="0.19134316127916678" green="0.21094690873502955" blue="0.24680397727272727" alpha="1" colorSpace="calibratedRGB"/>
                     </tabBar>
                     <connections>
                         <segue destination="vXZ-lx-hvc" kind="relationship" relationship="viewControllers" id="ywx-Sk-r8T"/>
@@ -303,7 +406,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="tintColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
-                        <color key="barTintColor" red="0.0" green="0.0" blue="0.24705882352941178" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="barTintColor" red="0.19215686274509802" green="0.21176470588235294" blue="0.24705882352941178" alpha="1" colorSpace="calibratedRGB"/>
                         <textAttributes key="titleTextAttributes">
                             <color key="textColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                         </textAttributes>
@@ -319,6 +422,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="charge" width="150" height="361"/>
         <image name="moon" width="143" height="155"/>
     </resources>
 </document>
